--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
     <link rel="icon" type="image/jpeg" href="images/yo.jpeg" >
     <!--  <link rel="alternate" href=""> -->
         <!--  <link rel="canonical"> -->
+    <style>
+        h1 {
+            color:rgb(223, 166, 125);
+        }
+        body {
+            background:beige ;
+        }
+        #botonclick{
+            background: rgb(196, 196, 133);
+            color: white;
+            border: 0;
+        }
+
+    </style>
     
 </head>
 <body>
@@ -60,7 +74,7 @@
             <li>React</li>
             <li>Type Script</li>
         </ol>
-            <button>
+            <button id="botonclick">
         Haz Click aquí
     </button>
     </aside>
