--- a/index.html
+++ b/index.html
@@ -16,16 +16,22 @@
     <style>
         h1 {
             color:rgb(223, 166, 125);
+            font-family: monospace;
         }
         body {
             background:beige ;
+            font-family: system-ui, 
+            -apple-system, BlinkMacSystemFont,
+            'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         #botonclick{
             background: rgb(196, 196, 133);
             color: white;
             border: 0;
         }
-
+        .description{
+            border: 1px solid red;
+        }
     </style>
     
 </head>
@@ -39,7 +45,7 @@
         </nav>
     </header>
     <main>
-    <p>10 años de experiencia en el mundo <strong>técnologico</strong></p>
+    <p class="description">10 años de experiencia en el mundo <strong>técnologico</strong></p>
     <h2 id="experiencia">Experiencia</h2>
     <ul>
         <li class="List-item">Startup</li>
